--- a/angular-blog/index.html
+++ b/angular-blog/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>AngularBlog</title>
-  <base href="./angular-blog">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>*{margin:0;padding:0;box-sizing:border-box;background-color:#f5f9fb;color:#000;font-family:Segoe UI,Tahoma,Geneva,Verdana,sans-serif}</style><link rel="stylesheet" href="styles.9d84e7166ebef04e.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.9d84e7166ebef04e.css"></noscript></head>
